--- a/index.html
+++ b/index.html
@@ -104,6 +104,35 @@
       </div>
     </div>
 
+    <div class="dialog" id="dialog">
+      <div class="dialog-content">
+        <h2>Match the color</h2>
+
+        <p>
+          Move the sliders to match the target color then validate your answer.
+          The icons will tell where to adjust your answer
+        </p>
+
+        <div class="result-container" id="result-template">
+          <div class="red-result result">
+            <span class="material-symbols-outlined visible"> done </span>
+          </div>
+          <div class="green-result result">
+            <span class="material-symbols-outlined visible">
+              chevron_left
+            </span>
+          </div>
+          <div class="blue-result result">
+            <span class="material-symbols-outlined visible">
+              chevron_right
+            </span>
+          </div>
+        </div>
+
+        <button class="button close" id="close-button">Close</button>
+      </div>
+    </div>
+
     <ul class="background">
       <li></li>
       <li></li>
